@@ -1,3 +1,8 @@
+* May 31 2001 hship
+
+Vlib:
+- Change the Publisher.script to use the 1.1 DTD.
+
 * May 30 2001 hship
 
 Fix Tutorial Makefile
